--- a/Final/css/styles.css
+++ b/Final/css/styles.css
@@ -1,75 +1,126 @@
-/* mobile styles */
-#container {
-    background-color: skyblue;
-}
+/* Global Styles */
 
-header {
-    text-align: center;
-}
-
-section {
-    background-color: #0b5ed7;
-    margin: 5px;
-    padding: 10px;
-}
-
-section h2 {
-    text-align: center;
-    color: white;
-}
-
-footer {
-    background-color: #0b5ed7;
-    padding: 40px 0;
-    text-align: center;
-    color: white;
-}
-
-#menu {
-    display: none;
-}
-
-.slicknav_menu {
-    background-color: #0b5ed7;
-}
-
-.slicknav_btn {
-    background-color: black;
-}
-
-.slider img {
-    display: block;
+img {
     width: 100%;
 }
 
-/* tablet styles */
-@media only screen and (min-width: 768px) {
-    .slicknav_menu {
-        display: none;
-    }
+header, h1, h2 {
+    text-align: center;
+}
 
-    #menu {
-        display: block;
+body {
+    background-color: rgb(66, 11, 11);
+}
+
+#container {
+    width: 75%;
+    margin: 0 auto;
+    background-color: rgb(173, 143, 10);
+    padding: 20px;
+    border: 2px solid rgb(202, 100, 4);
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: rgb(173, 143, 10);
+    text-decoration: none;
+}
+
+.desktop {
+    display: none;
+}
+
+main {
+    display: flex;
+}
+    
+
+/* Mobile Styles */
+
+header {
+    background-color: rgb(133, 33, 33);
+    padding: 20px 0;
+    text-align: center;
+}
+
+nav {
+    background-color: rgb(133, 33, 33);
+    text-align: center;
+    border-radius: 5em;
+}
+
+nav ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+nav li {
+    display: block;
+}
+
+nav li a {
+    display: block;
+    padding: 15px 0px;
+    border-top: 1px solid rgb(202, 100, 4);
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: rgb(202, 100, 4);
+}
+
+main {
+    padding: 10px;
+    margin: 10px;
+}
+
+main h2 {
+    color: black;
+    font-size: 40px;
+    text-align: center;
+}
+
+main img {
+    display: block;
+    margin: 20px auto;
+    border-radius: 20px;
+    width: 85%;
+}
+
+footer {
+    background-color: rgb(133, 33, 33);
+    padding: 40px 0px;
+    text-align: center;
+    color: white;
+}
+
+.desktop {
+    display: none;
+}
+
+/* Tablet Styles */
+
+@media only screen and (min-width: 768px) {
+
+    nav li a {
+        border-top: none;
     }
 
     header {
-        height: 250px;
+        background-image: url('../images/Tablet_Header.jpg');
+        background-size: cover;
+        background-position: center center;
+        padding: 60px 0;
     }
-
     header h1 {
-        font-size: 50px;
-        line-height: 200px;
-    }
-
-    nav {
-        text-align: center;
-        background-color: black;
-        padding: 5px 0;
-    }
-
-    nav ul {
-        padding: 0;
-        list-style-type: none;
+        color: white;   
+        text-shadow: 2px 2px 2px rgb(202, 100, 4);  
+        font-size: 2em;   
     }
 
     nav li {
@@ -77,24 +128,74 @@ footer {
     }
 
     nav li a {
-        display: block;
-        background-color: #0b5ed7;
-        padding: 10px 0;
-        width: 175px;
-        color: white;
-        font-size: 1.5em;
-        text-decoration: none;
+        padding: 10px 40px;
     }
 
-    nav li a:hover {
-        background-color: black;
-        text-decoration: underline;
+    main img {
+        width: 100%;
+    }
+
+    section , aside {
+        border: 4px solid rgb(202, 100, 4);
+        padding: 20px;
+        margin: 10px;
+    }
+
+    section {
+        width: 70%;
+    }
+
+    aside {
+        width: 30%;
     }
 }
 
+/* Desktop Styles */
+
 @media only screen and (min-width: 1024px) {
+    header {
+        background-image: url('../images/Desktop_Header.jpg');
+        padding: 100px 0;
+        background-position: center top;
+    }
+
+    header h1 {
+        font-size: 80px;
+    }
+
+    nav li a {
+        font-size: 3em;
+        padding: 10px 20px;
+        border-radius: 20px 20px 0 0;
+    }
+
     #container {
         width: 75%;
         margin: 20px auto;
+        border: 4px solid rgb(202, 100, 4);
+        background-image: url('../images/vr-world-space.jpg');
+        background-position: center center;
+    }
+
+    main {
+        background-color: rgba(173, 143, 10, .75);
+    }
+
+    .desktop {
+        display: block;
+    }
+
+    .tab_mobile {
+        display: none;
+    }
+
+    .active {
+        background-color: rgb(202, 100, 4); 
+        border-radius: 5em;               
+    }
+
+    main img {
+        border-radius: 20px;
+        border: 4px solid rgb(202, 100, 4);
     }
 }
